RegistreService/registre-service.yml
apiVersion: v1
kind: Service
metadata:
  name: Registre-service
spec:
  ports:
  - name: http
    targetPort: 8761
    port: 80
  selector:
    app: registre
