RegistreService/registre-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registre-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: registre.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: registre
          servicePort: http
